Added example to docs.

--- a/example/quickstart.ipynb
+++ b/example/quickstart.ipynb
@@ -3,6 +3,8 @@
   {
    "cell_type": "markdown",
    "source": [
+    "# Quickstart to fglib2\n",
+    "\n",
     "First, let us declare four variables with different domains each."
    ],
    "metadata": {
@@ -12,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "from fglib2.variables import Symbolic\n",
@@ -25,8 +27,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-19T17:46:26.531790129Z",
-     "start_time": "2023-10-19T17:46:26.489651526Z"
+     "end_time": "2023-10-19T17:53:32.951031256Z",
+     "start_time": "2023-10-19T17:53:32.946546417Z"
     }
    },
    "id": "b857b83f5ae8482c"
@@ -43,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "from fglib2.graphs import FactorNode\n",
@@ -61,8 +63,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-19T17:46:26.531963216Z",
-     "start_time": "2023-10-19T17:46:26.531675858Z"
+     "end_time": "2023-10-19T17:53:32.988115938Z",
+     "start_time": "2023-10-19T17:53:32.950188458Z"
     }
    },
    "id": "97e60dbee16c1dbd"
@@ -79,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
@@ -97,8 +99,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-19T17:46:26.565583974Z",
-     "start_time": "2023-10-19T17:46:26.531877822Z"
+     "end_time": "2023-10-19T17:53:33.090653831Z",
+     "start_time": "2023-10-19T17:53:32.954526101Z"
     }
    },
    "id": "bc41f2e657f4f715"
@@ -115,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
@@ -172,8 +174,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-19T17:46:26.567354775Z",
-     "start_time": "2023-10-19T17:46:26.564739104Z"
+     "end_time": "2023-10-19T17:53:33.090931722Z",
+     "start_time": "2023-10-19T17:53:33.063546468Z"
     }
    },
    "id": "47a7412bada04433"
