Added more tests. Refactored usage of normalize keyword to normalize method.

--- a/example/quickstart.ipynb
+++ b/example/quickstart.ipynb
@@ -14,10 +14,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "outputs": [],
    "source": [
-    "from fglib2.variables import Symbolic\n",
+    "from random_events.variables import Symbolic\n",
     "\n",
     "x1 = Symbolic('x1', domain=range(2))\n",
     "x2 = Symbolic('x2', domain=range(3))\n",
@@ -27,8 +27,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-19T17:53:32.951031256Z",
-     "start_time": "2023-10-19T17:53:32.946546417Z"
+     "end_time": "2023-11-02T15:13:40.814428028Z",
+     "start_time": "2023-11-02T15:13:40.754451007Z"
     }
    },
    "id": "b857b83f5ae8482c"
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "from fglib2.graphs import FactorNode\n",
@@ -63,8 +63,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-19T17:53:32.988115938Z",
-     "start_time": "2023-10-19T17:53:32.950188458Z"
+     "end_time": "2023-11-02T15:13:40.926252491Z",
+     "start_time": "2023-11-02T15:13:40.815684343Z"
     }
    },
    "id": "97e60dbee16c1dbd"
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
@@ -99,8 +99,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-19T17:53:33.090653831Z",
-     "start_time": "2023-10-19T17:53:32.954526101Z"
+     "end_time": "2023-11-02T15:13:41.194177397Z",
+     "start_time": "2023-11-02T15:13:40.926542391Z"
     }
    },
    "id": "bc41f2e657f4f715"
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -126,43 +126,43 @@
       "╒══════╤═════════╕\n",
       "│   x1 │       P │\n",
       "╞══════╪═════════╡\n",
-      "│    0 │ 0.44998 │\n",
+      "│    0 │ 3.28917 │\n",
       "├──────┼─────────┤\n",
-      "│    1 │ 0.55002 │\n",
+      "│    1 │ 4.02042 │\n",
+      "╘══════╧═════════╛\n",
+      "╒══════╤═════════╕\n",
+      "│   x2 │       P │\n",
+      "╞══════╪═════════╡\n",
+      "│    0 │ 2.37125 │\n",
+      "├──────┼─────────┤\n",
+      "│    1 │ 1.23933 │\n",
+      "├──────┼─────────┤\n",
+      "│    2 │ 3.69902 │\n",
       "╘══════╧═════════╛\n",
       "╒══════╤══════════╕\n",
-      "│   x2 │        P │\n",
+      "│   x3 │        P │\n",
       "╞══════╪══════════╡\n",
-      "│    0 │ 0.324403 │\n",
+      "│    0 │ 2.43769  │\n",
       "├──────┼──────────┤\n",
-      "│    1 │ 0.169548 │\n",
+      "│    1 │ 0.306737 │\n",
       "├──────┼──────────┤\n",
-      "│    2 │ 0.506049 │\n",
+      "│    2 │ 2.17523  │\n",
+      "├──────┼──────────┤\n",
+      "│    3 │ 2.38993  │\n",
       "╘══════╧══════════╛\n",
-      "╒══════╤═══════════╕\n",
-      "│   x3 │         P │\n",
-      "╞══════╪═══════════╡\n",
-      "│    0 │ 0.333492  │\n",
-      "├──────┼───────────┤\n",
-      "│    1 │ 0.0419636 │\n",
-      "├──────┼───────────┤\n",
-      "│    2 │ 0.297586  │\n",
-      "├──────┼───────────┤\n",
-      "│    3 │ 0.326958  │\n",
-      "╘══════╧═══════════╛\n",
-      "╒══════╤══════════╕\n",
-      "│   x4 │        P │\n",
-      "╞══════╪══════════╡\n",
-      "│    0 │ 0.211013 │\n",
-      "├──────┼──────────┤\n",
-      "│    1 │ 0.165152 │\n",
-      "├──────┼──────────┤\n",
-      "│    2 │ 0.198958 │\n",
-      "├──────┼──────────┤\n",
-      "│    3 │ 0.14797  │\n",
-      "├──────┼──────────┤\n",
-      "│    4 │ 0.276907 │\n",
-      "╘══════╧══════════╛\n"
+      "╒══════╤═════════╕\n",
+      "│   x4 │       P │\n",
+      "╞══════╪═════════╡\n",
+      "│    0 │ 1.54242 │\n",
+      "├──────┼─────────┤\n",
+      "│    1 │ 1.2072  │\n",
+      "├──────┼─────────┤\n",
+      "│    2 │ 1.4543  │\n",
+      "├──────┼─────────┤\n",
+      "│    3 │ 1.0816  │\n",
+      "├──────┼─────────┤\n",
+      "│    4 │ 2.02408 │\n",
+      "╘══════╧═════════╛\n"
      ]
     }
    ],
@@ -174,8 +174,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-19T17:53:33.090931722Z",
-     "start_time": "2023-10-19T17:53:33.063546468Z"
+     "end_time": "2023-11-02T15:13:41.195205356Z",
+     "start_time": "2023-11-02T15:13:41.185785904Z"
     }
    },
    "id": "47a7412bada04433"
