--- a/example/distributions.ipynb
+++ b/example/distributions.ipynb
@@ -16,13 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-10-27T14:01:50.728322533Z",
-     "start_time": "2023-10-27T14:01:50.704844528Z"
+     "end_time": "2023-11-02T15:14:41.667488383Z",
+     "start_time": "2023-11-02T15:14:41.636990366Z"
     }
    },
    "outputs": [
@@ -30,7 +30,7 @@
      "data": {
       "text/plain": "(Symbolic(name='animal'), Symbolic(name='color'), Integer(name='weight'))"
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Next, we create a random, multinomial distribution over those variables. We will normalize the distribution, such that the sum of all probabilities in it is 1."
+    "Next, we create a random, multinomial distribution over those variables. We will normalize the distribution, such that the sum of all probabilities in it is 1. Note that it is not necessary for factor graphs to have normalized factors."
    ],
    "metadata": {
     "collapsed": false
@@ -55,13 +55,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "outputs": [
     {
      "data": {
       "text/plain": "((Symbolic(name='animal'), Symbolic(name='color'), Integer(name='weight')),\n (3, 4, 25))"
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,14 +71,14 @@
     "import numpy as np\n",
     "np.random.seed(69)\n",
     "\n",
-    "distribution = Multinomial([animal, color, weight], np.random.rand(3, 4, 25), normalize=True)\n",
+    "distribution = Multinomial([animal, color, weight], np.random.rand(3, 4, 25)).normalize()\n",
     "distribution.variables, distribution.probabilities.shape"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-27T14:01:50.729911854Z",
-     "start_time": "2023-10-27T14:01:50.709641607Z"
+     "end_time": "2023-11-02T15:14:41.669845591Z",
+     "start_time": "2023-11-02T15:14:41.641591695Z"
     }
    },
    "id": "b4658690bcc40b12"
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "from random_events.events import Event\n",
@@ -109,8 +109,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-27T14:01:50.754778675Z",
-     "start_time": "2023-10-27T14:01:50.715655400Z"
+     "end_time": "2023-11-02T15:14:41.728917032Z",
+     "start_time": "2023-11-02T15:14:41.699385761Z"
     }
    },
    "id": "dffc7d500e84b520"
@@ -127,13 +127,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
       "text/plain": "0.37218590717704436"
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,8 +144,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-27T14:01:50.755060623Z",
-     "start_time": "2023-10-27T14:01:50.725150961Z"
+     "end_time": "2023-11-02T15:14:41.731048688Z",
+     "start_time": "2023-11-02T15:14:41.699511383Z"
     }
    },
    "id": "ee2f2d63802ad2d2"
@@ -162,13 +162,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "outputs": [
     {
      "data": {
       "text/plain": "([{Symbolic(name='animal'): ('Cat',), Symbolic(name='color'): ('brown',), Integer(name='weight'): (5,)}],\n 0.006809245726270245)"
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,8 +179,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-27T14:01:50.772976460Z",
-     "start_time": "2023-10-27T14:01:50.766905031Z"
+     "end_time": "2023-11-02T15:14:41.731457742Z",
+     "start_time": "2023-11-02T15:14:41.699600957Z"
     }
    },
    "id": "e2994d27e8474c54"
@@ -197,13 +197,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "outputs": [
     {
      "data": {
       "text/plain": "((Symbolic(name='animal'), Symbolic(name='color')), (3, 4))"
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,8 +215,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-27T14:01:50.773171427Z",
-     "start_time": "2023-10-27T14:01:50.766995891Z"
+     "end_time": "2023-11-02T15:14:41.731646143Z",
+     "start_time": "2023-11-02T15:14:41.699682618Z"
     }
    },
    "id": "d5c35229158ee9c2"
@@ -243,13 +243,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "outputs": [
     {
      "data": {
-      "text/plain": "1.0"
+      "text/plain": "0.37218590717704436"
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,8 +261,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-27T14:01:50.773313819Z",
-     "start_time": "2023-10-27T14:01:50.767050781Z"
+     "end_time": "2023-11-02T15:14:41.731791084Z",
+     "start_time": "2023-11-02T15:14:41.699766715Z"
     }
    },
    "id": "5f036dc30b5cf18d"
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "outputs": [
     {
      "name": "stdout",
@@ -331,8 +331,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-27T14:01:50.773470554Z",
-     "start_time": "2023-10-27T14:01:50.767116853Z"
+     "end_time": "2023-11-02T15:14:41.731995643Z",
+     "start_time": "2023-11-02T15:14:41.699946388Z"
     }
    },
    "id": "dcc9ca9e0f922e53"
